test/.antlr/simpleCParser.java
// Generated from d:\Working\Program\python\Cpp2LLVM\Cpp2LLVM\test\simpleC.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class simpleCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, ID=43, INT=44, DOUBLE=45, CHAR=46, 
		STRING=47, LIB=48, Conjunction=49, Operator=50, LineComment=51, BlockComment=52, 
		WS=53;
	public static final int
		RULE_prog = 0, RULE_include = 1, RULE_mStructDef = 2, RULE_structParam = 3, 
		RULE_mFunction = 4, RULE_params = 5, RULE_param = 6, RULE_funcBody = 7, 
		RULE_body = 8, RULE_block = 9, RULE_initialBlock = 10, RULE_arrayInitBlock = 11, 
		RULE_structInitBlock = 12, RULE_assignBlock = 13, RULE_ifBlocks = 14, 
		RULE_ifBlock = 15, RULE_elifBlock = 16, RULE_elseBlock = 17, RULE_condition = 18, 
		RULE_whileBlock = 19, RULE_forBlock = 20, RULE_for1Block = 21, RULE_for3Block = 22, 
		RULE_returnBlock = 23, RULE_expr = 24, RULE_mType = 25, RULE_mArray = 26, 
		RULE_mVoid = 27, RULE_mStruct = 28, RULE_structMember = 29, RULE_arrayItem = 30, 
		RULE_func = 31, RULE_strlenFunc = 32, RULE_atoiFunc = 33, RULE_printfFunc = 34, 
		RULE_scanfFunc = 35, RULE_getsFunc = 36, RULE_selfDefinedFunc = 37, RULE_argument = 38, 
		RULE_mID = 39, RULE_mINT = 40, RULE_mDOUBLE = 41, RULE_mCHAR = 42, RULE_mSTRING = 43, 
		RULE_mLIB = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "include", "mStructDef", "structParam", "mFunction", "params", 
			"param", "funcBody", "body", "block", "initialBlock", "arrayInitBlock", 
			"structInitBlock", "assignBlock", "ifBlocks", "ifBlock", "elifBlock", 
			"elseBlock", "condition", "whileBlock", "forBlock", "for1Block", "for3Block", 
			"returnBlock", "expr", "mType", "mArray", "mVoid", "mStruct", "structMember", 
			"arrayItem", "func", "strlenFunc", "atoiFunc", "printfFunc", "scanfFunc", 
			"getsFunc", "selfDefinedFunc", "argument", "mID", "mINT", "mDOUBLE", 
			"mCHAR", "mSTRING", "mLIB"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#include'", "'<'", "'>'", "'{'", "'}'", "';'", "','", "'('", 
			"')'", "'='", "'['", "']'", "'if'", "'else'", "'while'", "'for'", "'return'", 
			"'!'", "'*'", "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", "'<='", "'>='", 
			"'&&'", "'||'", "'int'", "'double'", "'char'", "'string'", "'void'", 
			"'struct'", "'.'", "'strlen'", "'atoi'", "'printf'", "'scanf'", "'&'", 
			"'gets'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "ID", "INT", "DOUBLE", "CHAR", 
			"STRING", "LIB", "Conjunction", "Operator", "LineComment", "BlockComment", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "simpleC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public simpleCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<InitialBlockContext> initialBlock() {
			return getRuleContexts(InitialBlockContext.class);
		}
		public InitialBlockContext initialBlock(int i) {
			return getRuleContext(InitialBlockContext.class,i);
		}
		public List<ArrayInitBlockContext> arrayInitBlock() {
			return getRuleContexts(ArrayInitBlockContext.class);
		}
		public ArrayInitBlockContext arrayInitBlock(int i) {
			return getRuleContext(ArrayInitBlockContext.class,i);
		}
		public List<StructInitBlockContext> structInitBlock() {
			return getRuleContexts(StructInitBlockContext.class);
		}
		public StructInitBlockContext structInitBlock(int i) {
			return getRuleContext(StructInitBlockContext.class,i);
		}
		public List<MStructDefContext> mStructDef() {
			return getRuleContexts(MStructDefContext.class);
		}
		public MStructDefContext mStructDef(int i) {
			return getRuleContext(MStructDefContext.class,i);
		}
		public List<MFunctionContext> mFunction() {
			return getRuleContexts(MFunctionContext.class);
		}
		public MFunctionContext mFunction(int i) {
			return getRuleContext(MFunctionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(90);
				include();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34))) != 0)) {
				{
				setState(101);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(96);
					initialBlock();
					}
					break;
				case 2:
					{
					setState(97);
					arrayInitBlock();
					}
					break;
				case 3:
					{
					setState(98);
					structInitBlock();
					}
					break;
				case 4:
					{
					setState(99);
					mStructDef();
					}
					break;
				case 5:
					{
					setState(100);
					mFunction();
					}
					break;
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public MLIBContext mLIB() {
			return getRuleContext(MLIBContext.class,0);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__0);
			setState(107);
			match(T__1);
			setState(108);
			mLIB();
			setState(109);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MStructDefContext extends ParserRuleContext {
		public MStructContext mStruct() {
			return getRuleContext(MStructContext.class,0);
		}
		public List<StructParamContext> structParam() {
			return getRuleContexts(StructParamContext.class);
		}
		public StructParamContext structParam(int i) {
			return getRuleContext(StructParamContext.class,i);
		}
		public MStructDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mStructDef; }
	}

	public final MStructDefContext mStructDef() throws RecognitionException {
		MStructDefContext _localctx = new MStructDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mStructDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			mStruct();
			setState(112);
			match(T__3);
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(113);
				structParam();
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__34))) != 0) );
			setState(118);
			match(T__4);
			setState(119);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructParamContext extends ParserRuleContext {
		public MTypeContext mType() {
			return getRuleContext(MTypeContext.class,0);
		}
		public MStructContext mStruct() {
			return getRuleContext(MStructContext.class,0);
		}
		public List<MIDContext> mID() {
			return getRuleContexts(MIDContext.class);
		}
		public MIDContext mID(int i) {
			return getRuleContext(MIDContext.class,i);
		}
		public List<MArrayContext> mArray() {
			return getRuleContexts(MArrayContext.class);
		}
		public MArrayContext mArray(int i) {
			return getRuleContext(MArrayContext.class,i);
		}
		public StructParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structParam; }
	}

	public final StructParamContext structParam() throws RecognitionException {
		StructParamContext _localctx = new StructParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structParam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__29:
			case T__30:
			case T__31:
			case T__32:
				{
				setState(121);
				mType();
				}
				break;
			case T__34:
				{
				setState(122);
				mStruct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(125);
				mID();
				}
				break;
			case 2:
				{
				setState(126);
				mArray();
				}
				break;
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(129);
				match(T__6);
				setState(132);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(130);
					mID();
					}
					break;
				case 2:
					{
					setState(131);
					mArray();
					}
					break;
				}
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MFunctionContext extends ParserRuleContext {
		public MIDContext mID() {
			return getRuleContext(MIDContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public MTypeContext mType() {
			return getRuleContext(MTypeContext.class,0);
		}
		public MVoidContext mVoid() {
			return getRuleContext(MVoidContext.class,0);
		}
		public MStructContext mStruct() {
			return getRuleContext(MStructContext.class,0);
		}
		public MFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mFunction; }
	}

	public final MFunctionContext mFunction() throws RecognitionException {
		MFunctionContext _localctx = new MFunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__29:
			case T__30:
			case T__31:
			case T__32:
				{
				setState(141);
				mType();
				}
				break;
			case T__33:
				{
				setState(142);
				mVoid();
				}
				break;
			case T__34:
				{
				setState(143);
				mStruct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(146);
			mID();
			setState(147);
			match(T__7);
			setState(148);
			params();
			setState(149);
			match(T__8);
			setState(150);
			match(T__3);
			setState(151);
			funcBody();
			setState(152);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_params);
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__29:
			case T__30:
			case T__31:
			case T__32:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				param();
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(155);
					match(T__6);
					setState(156);
					param();
					}
					}
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public MTypeContext mType() {
			return getRuleContext(MTypeContext.class,0);
		}
		public MIDContext mID() {
			return getRuleContext(MIDContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			mType();
			setState(166);
			mID();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncBodyContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ReturnBlockContext returnBlock() {
			return getRuleContext(ReturnBlockContext.class,0);
		}
		public FuncBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcBody; }
	}

	public final FuncBodyContext funcBody() throws RecognitionException {
		FuncBodyContext _localctx = new FuncBodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			body();
			setState(169);
			returnBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(175);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(171);
						block();
						}
						break;
					case 2:
						{
						setState(172);
						func();
						setState(173);
						match(T__5);
						}
						break;
					}
					} 
				}
				setState(179);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public InitialBlockContext initialBlock() {
			return getRuleContext(InitialBlockContext.class,0);
		}
		public ArrayInitBlockContext arrayInitBlock() {
			return getRuleContext(ArrayInitBlockContext.class,0);
		}
		public StructInitBlockContext structInitBlock() {
			return getRuleContext(StructInitBlockContext.class,0);
		}
		public AssignBlockContext assignBlock() {
			return getRuleContext(AssignBlockContext.class,0);
		}
		public IfBlocksContext ifBlocks() {
			return getRuleContext(IfBlocksContext.class,0);
		}
		public WhileBlockContext whileBlock() {
			return getRuleContext(WhileBlockContext.class,0);
		}
		public ForBlockContext forBlock() {
			return getRuleContext(ForBlockContext.class,0);
		}
		public ReturnBlockContext returnBlock() {
			return getRuleContext(ReturnBlockContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_block);
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				initialBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				arrayInitBlock();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(182);
				structInitBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(183);
				assignBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(184);
				ifBlocks();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(185);
				whileBlock();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(186);
				forBlock();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(187);
				returnBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitialBlockContext extends ParserRuleContext {
		public List<MIDContext> mID() {
			return getRuleContexts(MIDContext.class);
		}
		public MIDContext mID(int i) {
			return getRuleContext(MIDContext.class,i);
		}
		public MTypeContext mType() {
			return getRuleContext(MTypeContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public InitialBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialBlock; }
	}

	public final InitialBlockContext initialBlock() throws RecognitionException {
		InitialBlockContext _localctx = new InitialBlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_initialBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(190);
			mType();
			}
			setState(191);
			mID();
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(192);
				match(T__9);
				setState(193);
				expr(0);
				}
			}

			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(196);
				match(T__6);
				setState(197);
				mID();
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__9) {
					{
					setState(198);
					match(T__9);
					setState(199);
					expr(0);
					}
				}

				}
				}
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(207);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayInitBlockContext extends ParserRuleContext {
		public MTypeContext mType() {
			return getRuleContext(MTypeContext.class,0);
		}
		public MIDContext mID() {
			return getRuleContext(MIDContext.class,0);
		}
		public MINTContext mINT() {
			return getRuleContext(MINTContext.class,0);
		}
		public ArrayInitBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayInitBlock; }
	}

	public final ArrayInitBlockContext arrayInitBlock() throws RecognitionException {
		ArrayInitBlockContext _localctx = new ArrayInitBlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_arrayInitBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			mType();
			setState(210);
			mID();
			setState(211);
			match(T__10);
			setState(212);
			mINT();
			setState(213);
			match(T__11);
			setState(214);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructInitBlockContext extends ParserRuleContext {
		public MStructContext mStruct() {
			return getRuleContext(MStructContext.class,0);
		}
		public MIDContext mID() {
			return getRuleContext(MIDContext.class,0);
		}
		public MArrayContext mArray() {
			return getRuleContext(MArrayContext.class,0);
		}
		public StructInitBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structInitBlock; }
	}

	public final StructInitBlockContext structInitBlock() throws RecognitionException {
		StructInitBlockContext _localctx = new StructInitBlockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_structInitBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			mStruct();
			setState(219);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(217);
				mID();
				}
				break;
			case 2:
				{
				setState(218);
				mArray();
				}
				break;
			}
			setState(221);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignBlockContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<ArrayItemContext> arrayItem() {
			return getRuleContexts(ArrayItemContext.class);
		}
		public ArrayItemContext arrayItem(int i) {
			return getRuleContext(ArrayItemContext.class,i);
		}
		public List<MIDContext> mID() {
			return getRuleContexts(MIDContext.class);
		}
		public MIDContext mID(int i) {
			return getRuleContext(MIDContext.class,i);
		}
		public List<StructMemberContext> structMember() {
			return getRuleContexts(StructMemberContext.class);
		}
		public StructMemberContext structMember(int i) {
			return getRuleContext(StructMemberContext.class,i);
		}
		public AssignBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignBlock; }
	}

	public final AssignBlockContext assignBlock() throws RecognitionException {
		AssignBlockContext _localctx = new AssignBlockContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_assignBlock);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(230); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(226);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
					case 1:
						{
						setState(223);
						arrayItem();
						}
						break;
					case 2:
						{
						setState(224);
						mID();
						}
						break;
					case 3:
						{
						setState(225);
						structMember();
						}
						break;
					}
					setState(228);
					match(T__9);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(232); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(234);
			expr(0);
			setState(235);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
